# mindustry-but-coded-by-ai-idk

./: .gitignore  AI_HANDOFF.md  Cargo.toml  MIGRATION.md  README.md  rustmindustry.md
android/: Cargo.toml
android/src/: lib.rs
annotations/: Cargo.toml
annotations/src/: lib.rs
core/: Cargo.toml
core/assets/: version.properties
core/assets/bundles/: bundle_ru.properties  bundle_tr.properties
core/assets/sprites/: sprites.aatls
core/assets/sprites/fallback/: sprites.aatls
core/src/: lib.rs
core/src/mindustry/: client_launcher.rs  mod.rs  vars.rs
core/src/mindustry/ai/: astar.rs  base_builder_ai.rs  base_registry.rs  block_indexer.rs  control_pathfinder.rs  item_unit_stance.rs  mod.rs  pathfind_queue.rs  pathfinder.rs  rts_ai.rs  unit_command.rs  unit_group.rs  unit_stance.rs  wave_spawner.rs
core/src/mindustry/async/: async_core.rs  async_process.rs  avoidance_process.rs  mod.rs  physics_process.rs
core/src/mindustry/audio/: mod.rs  sound_control.rs  sound_loop.rs  sound_priority.rs
core/src/mindustry/content/: blocks.rs  bullets.rs  erekir_tech_tree.rs  items.rs  liquids.rs  loadouts.rs  mod.rs  planets.rs  sector_presets.rs  serpulo_tech_tree.rs  status_effects.rs  team_entries.rs  unit_commands.rs  unit_stances.rs  unit_types.rs  weathers.rs
core/src/mindustry/core/: content_loader.rs  (+10 more)
desktop/: Cargo.toml
desktop/src/: lib.rs  main.rs
ios/: Cargo.toml
ios/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  server_control.rs
tests/: Cargo.toml
tests/src/: lib.rs
tools/: Cargo.toml
tools/src/: lib.rs  main.rs
(+418 files in other folders)
